--- a/package.json
+++ b/package.json
@@ -9,12 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.10.0",
+    "framer-motion": "^7.5.2",
+    "html-react-parser": "^3.0.4",
     "next": "12.3.1",
+    "next-themes": "^0.2.1",
+    "nextjs-progressbar": "^0.0.14",
+    "quill": "^1.3.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.36.1",
+    "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-masonry-css": "^1.0.16",
+    "react-quilljs": "^1.3.3",
+    "socket.io-client": "^4.5.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.7",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
