--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tiptap/extension-collaboration": "^2.0.0-beta.199",
+    "@tiptap/react": "^2.0.0-beta.199",
+    "@tiptap/starter-kit": "^2.0.0-beta.199",
     "firebase": "^9.10.0",
     "framer-motion": "^7.5.2",
     "html-react-parser": "^3.0.4",
@@ -24,8 +27,11 @@
     "react-loader-spinner": "^5.3.4",
     "react-masonry-css": "^1.0.16",
     "react-quilljs": "^1.3.3",
+    "sass": "^1.55.0",
     "socket.io-client": "^4.5.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "y-webrtc": "^10.2.3",
+    "yjs": "^13.5.41"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
